--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
             <h2>Bolsa Acumulada: <span id="monto-bolsa">0</span></h2>
         </div>
 
-        <h1>CHAMPIONS Y COPA</h1>
+        <h1> SEMIFINAL CHAMPIONS LEAGUE Y SEMIFINAL LIGA DE ASCENSO MX 2025
+
+            PARTICIPA GRATIS POR UNA PLAYERA DEL CLUB QUE QUIERAS        </h1>
 
         <!-- PARTIDOS -->
         <!-- Partido 1 -->
